# fold-at-home

./: .gitignore  LICENSE  README.md  example_config.toml  pyproject.toml
src/fold_at_home/: __init__.py  cli.py  config.py  pipeline.py
src/fold_at_home/ai/: anthropic.py  ollama.py  openai.py  prompts.py  provider.py  schemas.py
src/fold_at_home/analysis/: alphafold_db.py  confidence.py  rmsd.py
src/fold_at_home/discovery/: clinvar.py  enrichment.py  gnomad.py  pubmed.py  uniprot.py
src/fold_at_home/folding/: alphafold.py  backend.py  colabfold.py  parser.py  preflight.py
src/fold_at_home/output/: citations.py  markdown.py
src/fold_at_home/watcher/: queue.py
