[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fold-at-home"
version = "0.1.0"
description = "Predict protein structures and generate AI-powered research summaries"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Clarity Protocol", email = "clarityproto@proton.me" },
]
keywords = ["protein", "folding", "alphafold", "colabfold", "bioinformatics", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "numpy>=1.24",
    "biopython>=1.80",
    "requests>=2.28",
    "httpx>=0.24",
    "tenacity>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.76.0"]
openai = ["openai>=1.0"]
all = ["anthropic>=0.76.0", "openai>=1.0"]
dev = ["pytest>=7.0", "pytest-mock"]

[project.scripts]
fold-at-home = "fold_at_home.cli:main"

[project.urls]
Homepage = "https://clarityprotocol.io"
Repository = "https://github.com/clarityprotocol/fold-at-home"
Issues = "https://github.com/clarityprotocol/fold-at-home/issues"
